# AlliesCalc

./: .hgignore  Cargo.toml  README.md
aa1942_2e/: Cargo.toml
aa1942_2e/src/: battle_phase.rs  combattype.rs  hit.rs  lib.rs  roll_selector.rs  survivor_selector.rs  test_probabilities.txt  unit.rs
angular-app/: .browserslistrc  angular.json  package-lock.json  package.json
angular-app/src/: index.html  styles.scss  variables.scss
angular-app/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  calc.service.ts  package.json
angular-app/src/app/model/: unit.ts
angular-app/src/app/round-chart/: round-chart.component.html  round-chart.component.scss  round-chart.component.spec.ts  round-chart.component.ts
angular-app/src/app/setup-force/: setup-force.component.html  setup-force.component.scss  setup-force.component.spec.ts  setup-force.component.ts
calc/: Cargo.toml
calc/src/: battle_phase.rs  combat.rs  combat_manager.rs  hit.rs  lib.rs  prob.rs  probability.rs  pruner.rs  quant.rs  roll.rs  roller.rs  round_manager.rs  round_result.rs  statistics.rs  stats.rs  survivor_selector.rs  unit.rs
calc/src/stats/: battle_summary.rs  round_summary.rs  stat.rs  summarizer.rs
src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
