[package]
name = "aa1942_2e"
version = "0.1.0"
edition = "2018"

[features]
default = ["serde1"]
serde1 = ["serde"]

[dependencies]
calc = { path = "../calc", version = "0.1.0" }

serde = { version = "1.0", features = ["derive", "rc"], optional = true }

[dev-dependencies]
fixed = "1.0"
float-cmp = "0.8.0"
