[package]
name = "allies-calc-rs-wasm"
version = "0.1.0"
authors = ["Michael Johnson <michael@ociaw.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
calc = { path = "../calc", version = "0.1.0" }
aa1942_2e = { path = "../aa1942_2e", version = "0.1.0" }

wasm-bindgen = "0.2.63"

console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
